# luabox

./: .gitattributes  .gitignore  .gitlab-ci.yml  BACKLOG.md  CHANGELOG.md  Cargo.toml  DIRECTION.md  LIMITATIONS.md  README.md  RELEASING.md  SHAPES-V2.md  SHAPES.md  SPEC.md  clippy.toml
.github/workflows/: ci.yml  differential.yml  fuzz.yml  release.yml
corpus/differ/: bitops_basic.lua  bitops_shifts.lua  close_error_path.lua  close_ordering.lua  const_local.lua  (+14 more)
crates/luabox-bundle/: Cargo.toml
crates/luabox-bundle/src/: lib.rs  minify.rs  resolve.rs  sourcemap.rs
crates/luabox-bundle/tests/: bundle.rs
crates/luabox-cli/: Cargo.toml
crates/luabox-cli/src/: audit_cmd.rs  auth_cmd.rs  bench_cmd.rs  build_cmd.rs  bundle_cmd.rs  check_cmd.rs  deps_cmd.rs  doc_cmd.rs  fmt_cmd.rs  github.rs  keychain.rs  lint_cmd.rs  lsp_cmd.rs  main.rs  modes.rs  outdated_cmd.rs  project.rs  publish_cmd.rs  run_cmd.rs  runtime.rs  scaffold.rs  search_cmd.rs  test_cmd.rs  toolchain_cmd.rs  toolchain_index.toml  upgrade_cmd.rs  watch.rs
crates/luabox-cli/src/doc_cmd/: markdown.rs  model.rs  render.rs
crates/luabox-cli/tests/: acceptance.rs  cross_package_defs.rs  toolchain_run.rs  watch.rs
crates/luabox-cli/tests/features/distribution/: audit.feature  luarocks.feature  outdated.feature  publish.feature  registry.feature  search.feature  url.feature
crates/luabox-cli/tests/features/emit/: build.feature  bundle.feature  modes.feature
crates/luabox-cli/tests/features/execution/: bench.feature  run.feature  test.feature  toolchain.feature
crates/luabox-cli/tests/features/frontend/: check.feature  defs.feature  deprecation.feature  deps.feature  doc.feature  explain.feature  fmt.feature  inference.feature  init.feature  lint.feature  require.feature  visibility.feature
crates/luabox-cli/tests/features/shapes/: distribution.feature  interop.feature  lb-files.feature  sealed.feature  trait-coherence.feature
crates/luabox-cli/tests/features/syntax/: dialect-validation.feature
crates/luabox-db/: Cargo.toml
crates/luabox-db/src/: db.rs  host.rs  input.rs  lib.rs  query.rs  value.rs  vfs.rs
crates/luabox-db/tests/: analysis.rs
crates/luabox-hir/: Cargo.toml
crates/luabox-hir/src/: arena.rs  file.rs  hir.rs  lib.rs  literal.rs  lower.rs  source_map.rs
crates/luabox-hir/tests/: lower.rs
crates/luabox-lint/: Cargo.toml
crates/luabox-lint/src/: config.rs  context.rs  diagnostic.rs  facts.rs  lib.rs  rule.rs  suppress.rs  tests.rs
crates/luabox-lint/src/rules/: concat_in_loop.rs  empty_then.rs  global_write.rs  mod.rs  nil_compare.rs  pairs_on_array.rs  shadowed_local.rs  undefined_global.rs  unused_local.rs  unused_param.rs
crates/luabox-lower/: Cargo.toml
crates/luabox-lower/src/: attribs.rs  bitops.rs  diag.rs  edit.rs  env.rs  floor_div.rs  gotos.rs  int_float.rs  jit_ext.rs  lib.rs  polyfill.rs  rewrite.rs
crates/luabox-lower/tests/: lowering.rs  property.rs
crates/luabox-lsp/: Cargo.toml
crates/luabox-lsp/src/: call_hierarchy.rs  code_action.rs  completion.rs  diagnostics.rs  document_highlight.rs  fmt.rs  folding.rs  goto_def.rs  goto_impl.rs  goto_type.rs  hover.rs  inlay_hints.rs  lb.rs  lib.rs  line_index.rs  luab.rs  references.rs  rename.rs  selection_range.rs  sema.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs  uri.rs
crates/luabox-lsp/tests/: server.rs
crates/luabox-resolve/: Cargo.toml
crates/luabox-resolve/src/: advisory.rs  dialect.rs  git_provider.rs  http.rs  lib.rs  lockfile.rs  manifest.rs  project.rs  provider.rs  registry.rs  report.rs  semver_ranges.rs  solver.rs  url_provider.rs
crates/luabox-resolve/src/luarocks/: constraint.rs  mod.rs  rockspec.rs  rockspec_edit.rs
crates/luabox-resolve/src/manifest/: edit.rs  error.rs  model.rs  parse.rs  workspace.rs
crates/luabox-resolve/tests/: git_provider.rs  luarocks.rs  proptests.rs  registry_provider.rs  resolve.rs
crates/luabox-store/: Cargo.toml
crates/luabox-store/src/: error.rs  hash.rs  json.rs  lib.rs  lock.rs  manifest.rs  object.rs  store.rs
crates/luabox-store/tests/: store.rs
crates/luabox-syntax/: Cargo.toml
crates/luabox-syntax/proptest-regressions/lua/: fmt.txt  parser.txt
crates/luabox-syntax/src/: dialect.rs  kind.rs  kind_macro.rs  lexer.rs  lib.rs  luacats.rs
crates/luabox-syntax/src/lua/: ast.rs  dialect.rs  fmt.rs  grammar.rs  kind.rs  lexer.rs  mod.rs  parser.rs  validate.rs
crates/luabox-syntax/src/lua/fmt/: emit.rs  strings.rs
crates/luabox-syntax/src/luacats/: mod.rs  tests.rs  ty.rs
crates/luabox-syntax/src/shape/: ast.rs  fmt.rs  kind.rs  lexer.rs  mod.rs  parser.rs
crates/luabox-syntax/src/shape/test_data/: spec_example.lb  spec_example.luab
crates/luabox-types/: Cargo.toml
crates/luabox-types/src/: assign.rs  check.rs  defs.rs  directive.rs  env.rs  generics.rs  infer.rs  lib.rs  lower.rs  ty.rs  version.rs
crates/luabox-types/src/shape/: check.rs  mod.rs  raw.rs  scope.rs  store.rs
crates/luabox-types/tests/: call_returns.rs  cross_file_require.rs  generics.rs  luacats_conformance.rs  operators.rs  scratch_repro.rs  shapes.rs  undefined_field.rs  version_gate.rs
editors/: jetbrains.md
editors/zed/: .gitignore  Cargo.toml  README.md  extension.toml
editors/zed/languages/luabox-shape/: config.toml  highlights.scm
editors/zed/src/: lib.rs
examples/: README.md
fuzz/: Cargo.toml
fuzz/corpus/lua_fmt/: messy.lua  tables_and_loops.lua
fuzz/corpus/lua_parse/: broken.lua  fib.lua  goto_and_bitops.lua  methods_and_close.lua
fuzz/corpus/luacats/: annotated_source.lua  tags.txt
fuzz/corpus/shape_parse/: broken_body.luab  generics_and_bounds.lb
fuzz/fuzz_targets/: lua_fmt.rs  lua_parse.rs  luacats.rs  shape_parse.rs
scripts/: differ.ps1  examples.ps1  examples.sh  install.ps1  install.sh  perf-gate.ps1  perf-gate.sh
smoke/: luabox.toml
tools/differ/: Cargo.toml
tools/differ/src/: compare.rs  corpus.rs  exec.rs  main.rs
tools/gen-corpus/: Cargo.toml
tools/gen-corpus/src/: main.rs
tree-sitter-luab/: .gitignore  README.md  grammar.js  package.json  parser.exp  parser.lib  tree-sitter.json
(+156 files in other folders)
