[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["tools/*", "fuzz"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/flying-dice/luabox"
rust-version = "1.92"

[workspace.dependencies]
# Intra-workspace (bounded contexts — see SPEC.md §16; luabox-diag is a
# cross-cutting support crate like rustc_errors, not a bounded context)
luabox-diag = { path = "crates/luabox-diag", version = "0.1.4" }
luabox-syntax = { path = "crates/luabox-syntax", version = "0.1.4" }
luabox-hir = { path = "crates/luabox-hir", version = "0.1.4" }
luabox-types = { path = "crates/luabox-types", version = "0.1.4" }
luabox-db = { path = "crates/luabox-db", version = "0.1.4" }
luabox-lower = { path = "crates/luabox-lower", version = "0.1.4" }
luabox-bundle = { path = "crates/luabox-bundle", version = "0.1.4" }
luabox-resolve = { path = "crates/luabox-resolve", version = "0.1.4" }
luabox-store = { path = "crates/luabox-store", version = "0.1.4" }
luabox-lint = { path = "crates/luabox-lint", version = "0.1.4" }
luabox-lsp = { path = "crates/luabox-lsp", version = "0.1.4" }

# External
rowan = "0.16"
salsa = "0.27"
pubgrub = "0.3"
notify = "8"
semver = "1"
sha2 = "0.10"
# LSP (rust-analyzer's stack: lsp-server over stdio, not tower-lsp — SPEC §16.1)
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
rayon = "1"
self-replace = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }
proptest = "1"
# Acceptance layer (SPEC.md §16.2)
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

# Restriction-class smell lints (opt-in by design; the groups above never
# enable these). Production code must not abort on reachable input or ship
# debug leftovers — tests are exempted via clippy.toml's
# allow-{unwrap,expect,panic}-in-tests.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "allow" # the CLI's reports legitimately print to stdout
string_slice = "warn"  # byte-slicing &str panics on UTF-8 boundaries — two real bugs found this way

# SPEC.md §16.1 release profile
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
