[package]
name = "luabox-bundle"
description = "luabox: require-graph bundling, tree-shaking, minify, sourcemaps (Emit context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luabox-syntax.workspace = true
luabox-hir.workspace = true
luabox-lower.workspace = true
serde.workspace = true
serde_json.workspace = true
rowan.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
