[package]
name = "luabox-cli"
description = "luabox: the unified Lua toolchain CLI (Frontend context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# SPEC.md: CLI binary `luabox`; the `lb` alias is created at install time
# by the packaging scripts (hardlink/shim), not as a second cargo target.
[[bin]]
name = "luabox"
path = "src/main.rs"

[dependencies]
luabox-syntax.workspace = true
luabox-diag.workspace = true
luabox-resolve.workspace = true
luabox-types.workspace = true
luabox-lint.workspace = true
luabox-lsp.workspace = true
luabox-lower.workspace = true
luabox-bundle.workspace = true
luabox-store.workspace = true
luabox-test.workspace = true
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
rayon.workspace = true
rowan.workspace = true
toml_edit.workspace = true
tempfile.workspace = true

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[[test]]
name = "acceptance"
harness = false

[lints]
workspace = true
