[package]
name = "luabox-cli"
description = "luabox: the unified Lua toolchain CLI (Frontend context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# SPEC.md: CLI binary `luabox`; the `lb` alias is created at install time
# by the packaging scripts (hardlink/shim), not as a second cargo target.
[[bin]]
name = "luabox"
path = "src/main.rs"

[dependencies]
luabox-syntax.workspace = true
luabox-diag.workspace = true
luabox-resolve.workspace = true
luabox-types.workspace = true
luabox-lint.workspace = true
luabox-lsp.workspace = true
luabox-lower.workspace = true
luabox-bundle.workspace = true
luabox-store.workspace = true
luabox-test.workspace = true
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
rayon.workspace = true
rowan.workspace = true
toml_edit.workspace = true
tempfile.workspace = true
sha2.workspace = true
serde.workspace = true
# GitHub-as-registry discovery (`search`/`outdated`): parse API JSON and emit
# the frozen GUI contract — never by hand-scanning (`string_slice` is denied).
serde_json.workspace = true
# `luabox upgrade` self-replace: renames the running exe out of the way on
# Windows (see upgrade_cmd.rs).
self-replace.workspace = true

[dev-dependencies]
cucumber.workspace = true
tokio.workspace = true
tempfile.workspace = true

[[test]]
name = "acceptance"
harness = false

[lints]
workspace = true
