[package]
name = "luabox-hir"
description = "luabox: desugared IR and name resolution (Semantics context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luabox-syntax.workspace = true
rowan.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
