[package]
name = "luabox-lower"
description = "luabox: target lowering and polyfill injection (Emit context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luabox-hir.workspace = true

[lints]
workspace = true
