[package]
name = "luabox-lsp"
description = "luabox: language server over the analysis database (Frontend context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luabox-db.workspace = true
luabox-diag.workspace = true
luabox-syntax.workspace = true
luabox-hir.workspace = true
luabox-resolve.workspace = true
rowan.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
