[package]
name = "luabox-resolve"
description = "luabox: PubGrub dependency solver, registry + luarocks bridge (Distribution context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
toml_edit.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
