[package]
name = "luabox-store"
description = "luabox: content-addressed store, fetch, verify (Distribution context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
