[package]
name = "luabox-syntax"
description = "luabox: lossless syntax trees for Lua dialects and the .lb shape DSL (Syntax context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rowan.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
