[package]
name = "luabox-types"
description = "luabox: unified type IR (LuaLS ⊕ Luau) and inference engine (Semantics context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
luabox-hir.workspace = true

[lints]
workspace = true
