[package]
name = "luabox-types"
description = "luabox: unified type IR (LuaCATS ⊕ shapes) and inference engine (Semantics context)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# luabox-hir is this crate's P1 substrate (inference over HIR); the P0
# annotation-driven checker walks the syntax tree directly, so the dep is
# declared but not yet imported.
luabox-hir.workspace = true
luabox-syntax.workspace = true
luabox-diag.workspace = true

[lints]
workspace = true
