[package]
name = "luabox-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# Zed compiles the extension to WebAssembly (wasm32-wasip2). A cdylib is
# required. This crate is deliberately NOT part of the luabox Cargo workspace
# (see the `exclude` in the repo-root Cargo.toml) — it targets wasm and pins
# its own zed_extension_api version independently of the toolchain crates.
[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
